# Deepfake_image_detection

./: README.md  app.py  index.html  pyproject.toml  render.yaml  requirements.txt  scaler.pkl  scaler_params.npz  vercel.json  xgb_model.json  xgb_model.pkl
api/: index.py
deepfake_app.egg-info/: PKG-INFO  SOURCES.txt
