[project]
name = "deepfake-app"
version = "0.1.0"
description = "Deepfake image detection web app"
requires-python = ">=3.10,<3.13"
dependencies = [
    "Flask==3.1.2",
    "gunicorn==23.0.0",
    "numpy==1.26.4",
    "Pillow==11.3.0",
    "xgboost-cpu==3.2.0",
    "ai-edge-litert==2.1.3",
]

[tool.setuptools.packages.find]
include = ["api*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
